--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,27 +4,37 @@
 
 <h2>Bookmarks</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Movie</th>
-      <th>Comment</th>
-      <th>Action</th> <!-- New column for delete links -->
-    </tr>
-  </thead>
-  <tbody>
-    <% @list.bookmarks.each do |bookmark| %>
+<div class="bookmark-table">
+  <table>
+    <thead>
       <tr>
-        <td><%= bookmark.movie.title %></td>
-        <td><%= bookmark.comment %></td>
-        <td>
-         <%= link_to 'Delete', list_bookmark_path(@list, bookmark), method: :delete, data: { confirm: 'Are you sure you want to delete this bookmark?' }, class: 'btn btn-danger' %>
-        </td>
+        <th>Movie</th>
+        <th>Comment</th>
+        <th>Action</th> <!-- New column for delete links -->
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @list.bookmarks.each do |bookmark| %>
+        <tr>
+          <td><%= bookmark.movie.title %></td>
+          <td><%= bookmark.comment %></td>
+          <td>
+            <%= link_to 'Delete', list_bookmark_path(@list, bookmark), data: { confirm: 'Are you sure you want to delete this bookmark?', turbo_method: :delete }, class: 'btn btn-danger' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <%= link_to 'Back to Lists', lists_path, class: 'btn btn-secondary' %>
 
 <%= link_to 'Add Movie', new_list_bookmark_path(@list.id), class: 'btn btn-primary' %>
+
+<% if @list.photo.present? %>
+  <div class="list-photo">
+    <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
+  </div>
+<% else %>
+  <p>Aucune photo disponible</p>
+<% end %>
